src/test/deca/context/valid/valid_include.deca
#include "Math.decah"
#include "AutreInclude.decah"

{
    int x=0;
    int y=0;

}
