src/test/deca/context/invalid/XAffectationToMinusX.deca
{
    int x = 2020;
    x = -x;
    float y = 2020.0f;
    y = -y;
    println(x);
    print("y = ",y);
}